(upload) pydantic test

--- a/003_fastapi_admin-main/templates/add-post.html
+++ b/003_fastapi_admin-main/templates/add-post.html
@@ -17,7 +17,7 @@
                     <textarea class="form-control"rows="3" name="description"
                               required></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary">Add new todo</button>
+                <button type="submit" class="btn btn-primary">Add new post</button>
             </form>
         </div>
     </div>
