--- a/004_fastapi_post_pagenation/templates/add-post.html
+++ b/004_fastapi_post_pagenation/templates/add-post.html
@@ -17,7 +17,7 @@
                     <textarea class="form-control"rows="3" name="description"
                               required></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary">Add new todo</button>
+                <button type="submit" class="btn btn-primary">Add new post</button>
             </form>
         </div>
     </div>
