(update) read 구성

--- a/006_fastapi_basic_form/templates/add-post.html
+++ b/006_fastapi_basic_form/templates/add-post.html
@@ -1,5 +1,4 @@
 {% include 'layout.html' %}
-
 <form method="POST">
 <table border="1">
     <tr>
@@ -11,9 +10,11 @@
     <tr>
         <th>Description</th>
         <td>
-            <textarea name="description" required></textarea>
+            <textarea rows="8" name="description" required></textarea>
         </td>
     </tr>
 </table>
-<button type="submit">New Post</button>
+<div class="find-btn">
+    <button type="submit">New Post</button>
+</div>
 </form>
