--- a/006_fastapi_basic_form/templates/home.html
+++ b/006_fastapi_basic_form/templates/home.html
@@ -9,12 +9,12 @@
         {% for post in posts %}
         <tr>
             <td>{{post.id}}</td>
-            <td>{{post.title}}</td>
+            <td><a href="read-post/{{post.id}}">{{post.title}}</a></td>
             <td>{{post.username}}</td>
-            <td><button onclick="window.location.href='edit-post/{{post.id}}'" type="button">
-            Edit
-        </button></td>
+            <td><button onclick="window.location.href='edit-post/{{post.id}}'" type="button">Edit</button></td>
         </tr>
         {% endfor %}
     </table>
-<a href="add-post"><button>등록</button></a>
+<div class="find-btn">
+    <a href="add-post"><button>New Post</button></a>
+</div>
