--- a/006_fastapi_basic_form/templates/login.html
+++ b/006_fastapi_basic_form/templates/login.html
@@ -11,10 +11,12 @@
     <tr>
         <th>Password</th>
         <td>
-            <input type="text" name="password" required>
+            <input type="password" name="password" required>
         </td>
     </tr>
 </table>
-<button type="submit">Login</button>
+<div class="find-btn">
+    <button type="submit">Login</button>
 </form>
-<a href="register">Register</a>
+    <button onclick="window.location.href='register'" type="button">Register</button>
+</div>
