--- a/006_fastapi_basic_form/templates/register.html
+++ b/006_fastapi_basic_form/templates/register.html
@@ -15,7 +15,7 @@
         </td>
     </tr>
     <tr>
-        <th>verify Password</th>
+        <th>Verify Password</th>
         <td>
             <input type="password" name="password2" required>
         </td>
@@ -27,6 +27,8 @@
         </td>
     </tr>
 </table>
-<button type="submit">Sign in</button>
+<div class="find-btn">
+    <button type="submit">Sign in</button>
 </form>
-<a href="/auth">Already account</a>
+    <button onclick="window.location.href='/auth'" type="button">Already account</button>
+</div>
