--- a/006_fastapi_basic_form/templates/layout.html
+++ b/006_fastapi_basic_form/templates/layout.html
@@ -4,29 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link id="favicon" rel="icon" type="image/x-icon" href="{{ url_for('static', path='/images/favicon.ico') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', path='/post/css/base.css') }}">
     <title>PostApp</title>
-    <style>
-        table{
-            border : 1px solid black;
-            border-collapse : collapse;
-        }
-        table {
-            margin : auto;
-            width:40%; 
-            margin-bottom: 1%;
-        }
-        input, textarea{
-            width: 90%; 
-        }
-        th, td{
-	        text-align: center;
-        }
-        .find-btn{
-	        text-align: center;
-        }
-    </style>
 </head>
 <body>
+    <h2>Posts App</h2>
         {% block content %}
 
         {% endblock %}
