--- a/006_fastapi_basic_form/templates/read-post.html
+++ b/006_fastapi_basic_form/templates/read-post.html
@@ -12,4 +12,5 @@
 </table>
 <div class="find-btn">
     <a href="/posts/"><button>List Post</button></a>
+    <button onclick="window.location.href='/posts/delete/{{post.id}}'" type="button">Delete</button>
 </div>
