--- a/006_fastapi_basic_form/templates/layout.html
+++ b/006_fastapi_basic_form/templates/layout.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta  name="viewport"  content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1"/>
     <link id="favicon" rel="icon" type="image/x-icon" href="{{ url_for('static', path='/images/favicon.ico') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', path='/post/css/base.css') }}">
     <title>PostApp</title>
