--- a/006_fastapi_basic_form/templates/layout.html
+++ b/006_fastapi_basic_form/templates/layout.html
@@ -6,6 +6,7 @@
     <meta  name="viewport"  content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1"/>
     <link id="favicon" rel="icon" type="image/x-icon" href="{{ url_for('static', path='/images/favicon.ico') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', path='/post/css/base.css') }}">
+    <script src="https://kit.fontawesome.com/9ca8c0473e.js" crossorigin="anonymous"></script>
     <title>PostApp</title>
 </head>
 <body>
