--- a/006_fastapi_basic_form/templates/layout.html
+++ b/006_fastapi_basic_form/templates/layout.html
@@ -11,6 +11,11 @@
 </head>
 <body>
     <h2>Posts App</h2>
+    
+    {% if msg %}
+        <div class="msg">{{ msg }}</div><br>
+    {% endif %}
+
         {% block content %}
 
         {% endblock %}
