--- a/006_fastapi_basic_form/templates/login.html
+++ b/006_fastapi_basic_form/templates/login.html
@@ -5,7 +5,7 @@
     <tr>
         <th>Username</th>
         <td>
-            <input type="text" name="email" required>
+            <input type="text" name="username" required>
         </td>
     </tr>
     <tr>
